fix: PLAY and PROGRAM are aligned properly

--- a/client/src/styles/CartPlayer.css
+++ b/client/src/styles/CartPlayer.css
@@ -82,6 +82,16 @@
 	justify-content: space-around;
 	align-items: center;
 	width: 100%;
+	height: 100%;
+}
+
+.CartPlayer_buttonAndDesc {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	align-items: center;
+	gap: 1vw;
 }
 
 .CartPlayer_tapeSlot {
